--- a/templates/staff-layout.html
+++ b/templates/staff-layout.html
@@ -44,7 +44,7 @@
                 <div class="dropdown profile-dropdown">
                   <button onclick="myFunction()" class="dropbtn"><img src="/static/images/person-circle-white.svg" height="30px">&nbsp;&nbsp;Profile</button>
                   <div id="myDropdown" class="dropdown-content">
-                    <a class="border-bottom" href="#">{{ username }}</a>
+                    <a class="border-bottom" href="/staff-profile">{{ username }}</a>
                     <a class="border-bottom" href="/staff">Dashboard</a>
                     <a class="border-bottom" href="#" data-bs-toggle="modal" data-bs-target="#passwordModal" data-bs-whatever="@getbootstrap">Change Password</a>
                     <a class="border-bottom" href="/logout">Log Out</a>
