required properties of profile picture in form data removed

--- a/templates/profile-staff.html
+++ b/templates/profile-staff.html
@@ -47,7 +47,7 @@ Profile
                           </div>
                           <div class="mb-0">
                             <label class="form-label">Profile Picture<r class="required-field"> (optional)</r></label>
-                            <input name="file" type="file" class="form-control form-control-file" id="photo" accept="image/*" required>
+                            <input name="file" type="file" class="form-control form-control-file" id="photo" accept="image/*">
                           </div>
                           <div class="mb-0">
                             <label class="form-label">Name<r class="required-field"> *</r></label>
